fixed collapse card toggle on med/large

--- a/src/faq.css
+++ b/src/faq.css
@@ -1,4 +1,4 @@
-.content {
+.inner-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -6,10 +6,12 @@
     text-align: center;
 }
 
-.content h1 {
+.inner-container h1 {
     color: var(--accent-dark);
     display: block;
-    margin-bottom: 1rem;
+    height: 3rem;
+    margin-bottom: 4rem;
+    width: 100%;
 }
 
 .collapse-wrapper {
@@ -18,7 +20,6 @@
     font-family: var(--sans-serif);
     font-size: 0.8rem;
     margin-bottom: 1rem;
-    min-height: 3.2rem;
     width: 100%;
 }
 
@@ -32,8 +33,8 @@
 .collapse-wrapper .toggle {
     align-self: flex-end;
     cursor: pointer;
-    height: 1.5rem;
-    margin: 0;
+    height: 2rem;
+    margin: -0.5rem 0 0 0;
     opacity: 0;
     position: absolute;
     width: calc(100% - 4rem);
@@ -106,4 +107,28 @@
 .collapse-wrapper .body {
     display: none;
     margin-top: 1rem;
+}
+
+@media screen and (min-width: 768px) {
+    .content {
+        box-shadow: 0 0 16px -4px var(--shadow);
+        height: 100vh;
+        margin: 0 auto;
+        max-width: 64rem;
+    }
+
+    .inner-container h1 {
+        margin-bottom: 1rem;
+    }
+
+    .collapse-wrapper {
+        height: min-content;
+        max-width: calc((64rem / 2) - 3rem);
+        margin: 0 1rem 1rem 1rem;
+    }
+
+    .collapse-wrapper .toggle {
+        margin-left: 1rem;
+        max-width: calc((64rem / 2) - 3rem);
+    }
 }
